--- a/templates/partials/footer.html
+++ b/templates/partials/footer.html
@@ -1,7 +1,7 @@
 {{define "footer"}}
 <footer class="site-footer">
     <div class="container">
-        <p>&copy; {{.Year}} All rights reserved.</p>
+        <p>&copy; {{year}} All rights reserved.</p>
     </div>
 </footer>
 {{end}}
